# LLM-Connector

./: README.md  pyproject.toml
llm_connector/: exceptions.py  factory.py
llm_connector/base/: batch.py  completion.py  file.py  message.py
llm_connector/providers/: __init__.py
llm_connector/providers/anthropic/: __init__.py  completion.py  fileapi.py
llm_connector/providers/groq/: __init__.py  batch.py  completion.py  fileapi.py
llm_connector/providers/openai/: __init__.py  completion.py
tests/: conftest.py  test_exceptions.py  test_factory.py  test_messages.py
tests/anthropic/: __init__.py  test_anthropic_async_batch.py  test_anthropic_async_completion.py  test_anthropic_async_fileapi.py  test_anthropic_batch.py  test_anthropic_completion.py  test_anthropic_connector.py  test_anthropic_fileapi.py
tests/groq/: test_groq_async_completion.py  test_groq_async_fileapi.py  test_groq_completion.py  test_groq_fileapi.py
tests/openai/: test_openai_async_batch.py  test_openai_async_completion.py  test_openai_async_fileapi.py  test_openai_batch.py  test_openai_completion.py  test_openai_connector.py  test_openai_fileapi.py
