[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-connector"
version = "0.1.0"
description = "A unified interface for interacting with multiple LLM providers"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Murali Anand" }
]
keywords = [
    "llm",
    "openai",
    "anthropic",
    "groq",
    "ai",
    "machine-learning",
    "chatgpt",
    "gpt",
    "language-model",
    "async",
    "asyncio",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
openai = [
    "openai>=2.15.0",
]
groq = [
    "groq>=1.0.0",
]
all = [
    "groq>=1.0.0",
    "openai>=2.15.0",
]

[project.urls]
Homepage = "https://github.com/muralianand12345/llm-connector"
Repository = "https://github.com/muralianand12345/llm-connector"
Issues = "https://github.com/muralianand12345/llm-connector/issues"

[dependency-groups]
dev = [
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["llm_connector"]

[tool.hatch.build.targets.sdist]
include = [
    "/llm_connector",
    "/LICENSE",
    "/README.md",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
